Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-66835

qmake -install qinstall will ignore the hidden directory and files.

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.12.4, 5.14.0 Alpha
    • 5.9, 5.10
    • Build tools: qmake
    • None
    • Ubuntu 16.04

      Qt 5.9.4
    • 9617791075e02f19675f60060cb5776eb0e09edd (qt/qtbase/5.12)

    Description

      Execute the command  "qmake -install qinstall /tmp/sourcedir /tmp/dest", if hidden  directory or files (such as /tmp/sourcedir/.test) contained in /tmp/sourcedir, the directory and files will be ignored and will not be installed to /tmp/dest.

      As my seek, It caused in  the installFileOrDirectory() of qbase/qmake/main.cpp.

      QDirIterator it(source, QDir::AllEntries | QDir::NoDotAndDotDot);

      It should be QDirIterator it(source, QDir::AllEntries | QDir::NoDotAndDotDot | QDir::Hidden);

       

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            jbornema Joerg Bornemann
            jimmyhuang Huang Jimmy
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes